fix(text-editor): add white-space pre-wrap to code blocks

--- a/apps/web/src/common/components/editor/text-editor-nodes.pcss
+++ b/apps/web/src/common/components/editor/text-editor-nodes.pcss
@@ -157,6 +157,7 @@
         @apply bg-gray-100 rounded-lg;
         margin-top: 0.75rem;
         padding: 0.5rem 1rem;
+        white-space: pre-wrap;
         > code {
             font-family: $font-code;
             font-size: 0.875rem;
